# network-rca-openenv

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  baseline.py  environment.py  extract_tasks.py  inference.py  models.py  openenv.yaml  pyproject.toml  random_agent.py  readme.md  requirements.txt  smoke_test.py  tasks.py
data/: tasks.json
network-rca-env/: .dockerignore  .env  README.md  app.py  baseline.py  deploy_hf_spaces.txt  environment.py  inference.py  smoke_test.py
network-rca-env/server/: app.py
