[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-rca-env"
version = "1.0.0"
description = "Simulated network root cause analysis OpenEnv environment"
readme = "readme.md"
requires-python = ">=3.10"
authors = [
  { name = "3xNinja" }
]
dependencies = [
  "fastapi",
  "uvicorn",
  "openenv-core",
  "pydantic",
  "openai",
  "gymnasium",
  "sentence-transformers",
  "torch",
  "networkx",
  "pandas",
  "mysql-connector-python",
  "langgraph",
  "langchain"
]

[tool.setuptools]
py-modules = [
  "app",
  "baseline",
  "environment",
  "extract_tasks",
  "models",
  "random_agent",
  "tasks"
]

[project.scripts]
server = "server.app:main"
